# libtemplate

./: CMakeLists.txt  LICENSE.txt  README.txt  config_template.sh
cmake/macros/: libtemplateConfig.cmake.in
cmake/scripts/: coverage.sh.in
doc/: Doxyfile.cmake
include/__targetname__/: config.hpp.cmake
include/template/: config.hpp.cmake
src/: CMakeLists.txt
test/: CMakeLists.txt  create_test.py
